# fastapi-chat

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-all.txt  requirements.txt  start.sh
app/: prestart.sh  start.sh
app/app/: config.py  main.py
app/app/api/: _router.py  auth.py  messages.py  org_conversations.py  org_users.py  organizations.py  platform.py  users.py
app/app/api/v1/: _router.py  auth.py  conversations.py  organizations.py  router.py  users.py
app/app/db/: _base.py  _memory.py  base.py  conversations.py  messages.py  organizations.py  tokens.py  users.py
app/app/schemas/: __init__.py  conversations.py  messages.py  oauth.py  pagination.py  permissions.py  role_per_definitions.py  roles.py
app/app/utils/: common.py  oauth.py
fastapi_chat/: config.py  main.py
fastapi_chat/api/: auth.py  messages.py  org_conversations.py  platform.py
fastapi_chat/db/: _base.py  _memory.py  conversations.py  messages.py  organizations.py  tokens.py  users.py
fastapi_chat/schemas/: common.py  conversations.py  messages.py  oauth.py  organizations.py  role_per_definitions.py  users.py
fastapi_chat/utils/: common.py  oauth.py
tests/: conftest.py  utils.py
tests/stories/: test_auth_apis.py  test_create_platform_users.py  test_manage_org_users.py  test_manage_organizations.py  test_manage_platform_users.py
