[tool.poetry]
authors = ["Allen Chou <f1470891079@gmail.com>"]
description = ""
license = "MIT"
name = "fastapi-chat"
package-mode = false
readme = "README.md"
version = "0.2.0"

[tool.poetry.dependencies]
aiohttp = "*"
colorama = "*"
cryptography = "*"
fastapi = { extras = ["all"], version = "*" }
passlib = { extras = ["bcrypt"], version = "*" }
psutil = "*"
pydantic = { extras = ["email"], version = "*" }
pydantic-settings = "*"
pymongo = { version = "^4", extras = ["srv"] }
python = "^3.12"
python-jose = { extras = ["cryptography"], version = "*" }
pytz = "*"
rich = "*"
uuid-utils = "*"
uvicorn = { extras = ["standard"], version = "*" }
yarl = "*"

[tool.poetry.extras]
all = []

[tool.poetry.group.dev.dependencies]
black = "*"
faker = "*"
isort = "*"
poetry-plugin-export = "*"
pytest = "*"
pytest-asyncio = "*"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E704", "W503"]
max-line-length = 88

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]
pythonpath = [".", "app"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
